syntax = "proto3";

import "google/protobuf/empty.proto";
package secrets;

service SecretStore {
	rpc GetSecret (GetSecretRequest) returns (GetSecretResponse);
	rpc GetSecretsCount (google.protobuf.Empty) returns (SecretsCount);
	rpc InsertSecret (SecretData) returns (google.protobuf.Empty);
}

message GetSecretRequest {
	int32 id = 1;
}

message GetSecretResponse {
	oneof payload {
		SecretData data = 1;
		string error_message = 2;
	}
}

message SecretData {
	int32 id = 1;
	string title = 2;
	string description = 3;
	SecretLevel level = 4;
}

message SecretsCount {
	int32 count = 1;
}

enum SecretLevel {
	RESTRICTED = 0;
	SECRET = 1;
	TOP_SECRET = 2;
}